# beacon-analysis-server

./: .dockerignore  .editorconfig  .gitignore  LICENSE  Makefile  README.md  config.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
beacon_analysis_server/: __init__.py  config.py  dataset.py  features.py  main.py  plots.py  script.py  train_sentiment.py  train_setfit.py
beacon_analysis_server/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
