[build-system]
requires      = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beacon_analysis_server"
version = "0.0.1"
description = "A data analysis service for Beacon"
authors = [{ name = "Beacon" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.128.0",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "uvicorn>=0.40.0",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src         = ["beacon_analysis_server"]
include     = ["pyproject.toml", "beacon_analysis_server/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party          = ["beacon_analysis_server"]
force-sort-within-sections = true
