[build-system]
requires      = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beacon_analysis_server"
version = "0.3.0"
description = "A data analysis service for Beacon"
authors = [{ name = "Beacon" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "clean-text>=0.6.0",
    "deep-translator>=1.11.4",
    "fastapi>=0.128.0",
    "fastexcel>=0.19.0",
    "ipython",
    "jupyterlab",
    "keybert>=0.9.0",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.1.0",
    "pandas",
    "pip",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pytest",
    "python-dotenv",
    "rapidfuzz>=3.14.3",
    "ruff",
    "scikit-learn",
    "setfit>=1.1.3",
    "symspellpy>=6.9.0",
    "tqdm",
    "transformers>=4.57.6",
    "typer",
    "unidecode>=1.4.0",
    "uvicorn>=0.40.0",
    "vadersentiment>=3.3.2",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src         = ["beacon_analysis_server"]
include     = ["pyproject.toml", "beacon_analysis_server/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party          = ["beacon_analysis_server"]
force-sort-within-sections = true
